"Fork me on GitHub" ribbon

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
         <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
+        <a class="github-fork-ribbon" href="https://github.com/icai-icaiw/icaiw-web-template" target="_blank" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 
         <nav class="navbar navbar-expand-md navbar-light bg-light"> <!-- fixed-top -->
             <a class="navbar-brand">Acronym'20</a>
